--- a/prompts/management/leadership/operational_excellence_communication.prompt.yaml
+++ b/prompts/management/leadership/operational_excellence_communication.prompt.yaml
@@ -1,7 +1,8 @@
 ---
 name: Operational Excellence Communication Framework
 version: 0.2.0
-description: improved collaboration strategy between Business Development, Clinical Operations, and Data Management using industry-standard governance.
+description: improved collaboration strategy between Business Development, Clinical Operations, and Data Management using
+  industry-standard governance.
 metadata:
   domain: management
   complexity: medium
@@ -11,6 +12,7 @@ metadata:
   - governance
   - clinical-operations
   - communication-matrix
+  requires_context: true
 variables:
 - name: current_processes
   description: description of existing communication practices and pain points
@@ -45,24 +47,25 @@ messages:
     *   **Terminology:** Use industry-standard acronyms (e.g., MBR, QBR, SOP, CAPA) without definitions.
     *   **Formatting:** Use strict Markdown headers (`##`).
     *   **No Apologies:** Do not start with "Here is a plan..." or "I hope this helps." Jump straight into the framework.
-
 - role: user
   content: |
     <current_processes>
     {{current_processes}}
     </current_processes>
 testData:
-  - inputs:
-      current_processes: "Currently, BD hands over the project via email. ClinOps sets up ad-hoc meetings when issues arise. Data Management is often looped in too late for database design. No formal escalation path exists; we just email the Director if things explode."
-    evaluators:
-      - type: regex
-        pattern: "Governance Framework"
-      - type: regex
-        pattern: "Communication Matrix"
-      - type: regex
-        pattern: "RACI Model"
-      - type: regex
-        pattern: "Escalation Pathways"
-      - type: regex
-        pattern: "KPIs for Coordination"
+- inputs:
+    current_processes: Currently, BD hands over the project via email. ClinOps sets up ad-hoc meetings when issues arise.
+      Data Management is often looped in too late for database design. No formal escalation path exists; we just email the
+      Director if things explode.
+  evaluators:
+  - type: regex
+    pattern: Governance Framework
+  - type: regex
+    pattern: Communication Matrix
+  - type: regex
+    pattern: RACI Model
+  - type: regex
+    pattern: Escalation Pathways
+  - type: regex
+    pattern: KPIs for Coordination
 evaluators: []
